Closed
Bug 324707
Opened 20 years ago
Closed 20 years ago
Animated GIFs leave trails / don't erase in Cairo
Categories
(Core :: Graphics, defect)
Core
Graphics
Tracking
()
RESOLVED
FIXED
People
(Reporter: polidobj, Assigned: pavlov)
References
()
Details
(Whiteboard: cairo - examples in comment 9)
Attachments
(1 file)
|
6.38 KB,
patch
|
vlad
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060125 Firefox/1.6a1
Build Identifier: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060125 Firefox/1.6a1
Some frames of some of the gifs in the URL given are black and white instead of being in color.
Reproducible: Always
| Reporter | ||
Updated•20 years ago
|
Whiteboard: cairo
Comment 1•20 years ago
|
||
By "throbber" do you mean the spinning arrow thing on loading tabs, which seems to be blank with Cairo builds?
| Reporter | ||
Comment 2•20 years ago
|
||
Yes the throbber on the tabs and the throbber in the top right corner of the browser. The throbber appears ok when not animated. But when it is animated it disappears. The throbbers on the tabs only show when they are animated so they never appear.
Comment 3•20 years ago
|
||
Is this the same issue as bug 324892?
| Reporter | ||
Comment 4•20 years ago
|
||
Now the throbber doesn't disappear when it's supposed to be active. But it still doesn't animate. No change in the gif problem on the URL given.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060131 Firefox/1.6a1 ID:2006013104
(In reply to comment #5)
> per forums confirmed on Linux/Mac
It would be pretty difficult to confirm this on the mac, because mac cairo doesn't draw images yet ;)
| Reporter | ||
Comment 7•20 years ago
|
||
(In reply to comment #3)
> Is this the same issue as bug 324892?
>
Opacity is fixed but the gif problems remain.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060208 Firefox/1.6a1 ID:2006020904
Comment 8•20 years ago
|
||
I think this bug is aobut several problems. The URL listd no longer appears to show any issues.
The throbber now at least displays when it should be animated.
The remaining sisue is that chrome animated gifs do not animate.
Summary: Some animated gifs including the throbber don't work in cairo builds → Chrome animated gifs including the throbber don't animate in cairo builds
| Reporter | ||
Comment 9•20 years ago
|
||
This could be the catch all bug for animated gif problems. I still see some gifs with black frames on the URL given. Also I'm not sure about the chrome distinction. If you load the throbber in the client area from lxr it still doesn't animate. And I've tried using the qute throbber to override the current throbber and it worked.
e.g. this doesn't animate:
http://lxr.mozilla.org/mozilla/source/browser/themes/winstripe/browser/Throbber.gif
e.g. this does (even in chrome)
http://lxr.mozilla.org/mozilla/source/mail/themes/qute/mail/icons/throbber-small.gif
I've also opened the throbber in Image Ready and resaved it and then it works. I'm not sure what the deal is there.
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060212 Firefox/1.6a1 ID:2006021215
Summary: Chrome animated gifs including the throbber don't animate in cairo builds → animated gif problems in cairo builds including the throbber
Comment 10•20 years ago
|
||
Hmm. Guess I should have looked at the images with a non-cairo build a bit closer. I just really looked to see if they all animated. It does appear that some of them animate but not correctly.
What made me think it was a distinction with chrome gifs is that I have Forecastfox Enhanced isntalled, which allows you to give the URL for an animated radar gif and displays that if you hover over a status bar icon. The radar image that I had selcted did not animate either. After seeing your comment I did more testing and it appears that that iamge does not animate correctly in the content area either.
So, it appears that some iamges just don't animate at all, some cdhange to baclk and white for some frames of the animateion adn others seem ok.
Updated•20 years ago
|
Summary: animated gif problems in cairo builds including the throbber → Some animated gifs including the throbber don't animate
Whiteboard: cairo → examples in comment 9
Comment 11•20 years ago
|
||
<a href="http://img.photobucket.com/albums/v51/DaMoo/de2108f2.gif">This</a> image from a somebodys signature on a foum i visit displays a LOT of odd behavior. Not only do most of the frames apear as black and white but it also apears to be merging some frames while there is also what looks to be part of the first frame in the background and shifted to the lower right.
Updated•20 years ago
|
Whiteboard: examples in comment 9 → cairo
Updated•20 years ago
|
Whiteboard: cairo → cairo - examples in comment 9
Comment 12•20 years ago
|
||
All animated gifs have stopped working here including the throbber.
Comment 13•20 years ago
|
||
Sorry. make that the throbber never works, and some animated gifs do not work.
Comment 14•20 years ago
|
||
Heya everyone. One of the guys at forum just asked about this prob and so I decided to look into it.
What I've found is that animated gifs that repeat forever work fine but gifs that are set to play only once do not work. Upon loading a page with a "play once only" gif the gif will play as it should but should you ever come back to that page again in the future or refresh the page right then and there it will do nothing.
Two things I have found to affect this. Cache and authenticated sessions found in Tools-->Clear private data. If you clear either one or the other and then refresh the page you will see the gif function as it should. This I have found to be true for me anyway. I tried this many times over to be sure.
Hope this helps.
Schot
Updated•20 years ago
|
Flags: blocking1.9a1?
Comment 15•20 years ago
|
||
*** Bug 331027 has been marked as a duplicate of this bug. ***
Updated•20 years ago
|
Summary: Some animated gifs including the throbber don't animate → Animated GIF problems in Cairo (including throbber)
Comment 16•20 years ago
|
||
On each animation tick, image lib is doing its job it would seem of dispatching FrameChanged notifications. And, it looks like the view manager is successfully invalidating widgets accordingly. I traced invalidation down to a call to the Win32 InvalidateRect API, but it's hard for me to connect that up to any corresponding WM_PAINT. I'm not sure why animated GIFs are broken :-/
Severity: normal → critical
| Assignee | ||
Comment 17•20 years ago
|
||
i believe the problem lies within DrawToImage in nsThebesImage. I don't think it is properly blending. Also could be a problem with the compositing in the gif code dealing with 24bpp/1b vs 32bpp. I'm going to be poking at the image decoders sometime in the next week or so so I can take a closer look.
Comment 18•20 years ago
|
||
The throbber seems to be working now on the 2006032505 build, can someone please confrim?
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060325 Firefox/1.6a1 ID:2006032505 [cairo]
| Assignee | ||
Comment 19•20 years ago
|
||
hey, look at that. i seemed to have actually fixed something with my patch for 331298...
Comment 20•20 years ago
|
||
(In reply to comment #11)
> <a href="http://img.photobucket.com/albums/v51/DaMoo/de2108f2.gif">This</a>
> image from a somebodys signature on a foum i visit displays a LOT of odd
> behavior. Not only do most of the frames apear as black and white but it also
> apears to be merging some frames while there is also what looks to be part of
> the first frame in the background and shifted to the lower right.
>
Most of the frames now appear as normal, ie no more black and white, however the merging of some frames are still occuring and leave the frames' mark at the background.
Comment 21•20 years ago
|
||
The problem of leaving trails behind can also be seen with many of the images from the original URL, for example:
http://www.gifs.net/Animation11/Animals/Cats/black_cat_runs.gif
http://www.gifs.net/Animation11/Animals/Cats/cartoon_cat.gif
http://www.gifs.net/Animation11/Animals/Cats/cat.gif
http://www.gifs.net/Animation11/Animals/Cats/Cat_chef.gif
They all work in IE7.
Updated•20 years ago
|
Summary: Animated GIF problems in Cairo (including throbber) → Animated GIFs leave trails / don't erase in Cairo
Comment 22•20 years ago
|
||
Actually the issue appears to be with some frames being mispositioned. Here is an example which shows this well.
http://www.gifs.net/image/Animals/Cats/Cat_expands/1424
The bottom edge of the cat is not supposed to be moving.
| Assignee | ||
Comment 23•20 years ago
|
||
this cleans up some of the way we blacken frames and makes things a little bit better but doesn't solve all the problems.
We're going to need to overhaul the gif decoder a bit and make it not do compositing of frames after-the-fact. Because we're using premultiplied RGBA we can't recover alpha and we can't really composite. Much bigger patch to come in the next few weeks.
Attachment #216879 -
Flags: review?(vladimir) → review+
| Assignee | ||
Updated•20 years ago
|
Attachment #216879 -
Attachment description: first pass at gif cleanup/fixes for cairo → first pass at gif cleanup/fixes for cairo (checked in)
Comment 24•20 years ago
|
||
*** Bug 336692 has been marked as a duplicate of this bug. ***
Comment 25•20 years ago
|
||
(In reply to comment #20)
> (In reply to comment #11)
> > <a href="http://img.photobucket.com/albums/v51/DaMoo/de2108f2.gif">This</a>
> > image from a somebodys signature on a foum i visit displays a LOT of odd
> > behavior. Not only do most of the frames apear as black and white but it also
> > apears to be merging some frames while there is also what looks to be part of
> > the first frame in the background and shifted to the lower right.
> >
>
> Most of the frames now appear as normal, ie no more black and white, however
> the merging of some frames are still occuring and leave the frames' mark at the
> background.
It's now showing a bunch of the frames with black backgrounds again (see the just-filed bug 336532), so I think this regressed, can anyone pinpoint when?
Comment 26•20 years ago
|
||
This appears to have been fixed by the check-in for bug 336532.
| Reporter | ||
Comment 27•20 years ago
|
||
Looks good to me.
2006081119
-> fixed
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Flags: blocking1.9a1?
Resolution: --- → FIXED
Comment 28•19 years ago
|
||
See bug 143046 for a better approach to animated gif frame handling...
You need to log in
before you can comment on or make changes to this bug.
Description
•