first pass at making animated gifs work better in cairo builds. bug 324707. r=vlad